Fix product row responsiveness, Break into two rows

--- a/web/css/_variables.scss
+++ b/web/css/_variables.scss
@@ -20,6 +20,7 @@ $brand-danger: #e74c3c;
   background: $brand-second;
   border: 0;
   cursor: pointer;
+  border-radius: 2px;
   &.red {
     background: $brand-danger;
 
